# pqc-lab

./: .gitignore  CHANGELOG.md  CITATION.cff  NOTICE  README.md  pixi.toml  pixi.toml.bak  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile.cpu  Dockerfile.pqc  README.md
docs/: capacity_dataset_manifest.md  capacity_methodology.md  crypto_agility_analysis.md  mldsa_verify_capacity_analysis.md  mldsa_vs_slhdsa_verify_comparison.md  oqs_opt_in_setup.md  pqc_landscape_analysis.md  slhdsa_verify_capacity_analysis.md  verify_capacity_methodology.md
examples/: energy_scenario_monte_carlo.py  finance_monte_carlo.py  finance_option_scoring.py  pqc_roundtrip.py  quantum_aer_smoke.py
fixtures/: options_snapshot_sample.csv
fixtures/signatures/: mock_verify_pool_256.jsonl
profiles/: mock_ecdh.yaml  mock_pqc_kem.yaml  real_frodokem_976_shake.yaml  real_hqc_256.yaml  real_hybrid_mlkem_frodo.yaml  real_hybrid_mlkem_hqc.yaml  real_mceliece.yaml  real_mlkem.yaml
profiles/verify_capacity/: mldsa_verify_c1.yaml  mldsa_verify_c10.yaml  mldsa_verify_c12.yaml  mldsa_verify_c128.yaml  mldsa_verify_c16.yaml  mldsa_verify_c8.yaml  (+5 more)
scripts/: bootstrap_oqs_local.sh  check_runtime.sh  container_smoke.sh  generate_mldsa_pool.sh  make_capacity_manifest.sh  preflight_real_mldsa.sh  run_real_verify_first2.sh  run_verify_c16_c32.sh  run_verify_c64_c128.sh  run_verify_first2.sh  run_verify_refinement.sh  summarize_enterprise.py
tests/: test_capacity_harness.py  test_crypto_agility.py  test_finance_quality_gate.py  test_finance_scoring.py  test_smoke.py  test_verify_capacity.py
(+225 files in other folders)
